ajout de cors et modif

--- a/env.js.example
+++ b/env.js.example
@@ -10,5 +10,6 @@
     host: "", // MongoDB Hostname
     base: "", // MongoDB Database
     // https://phpsolved.com/phpmyadmin-blowfish-secret-generator/
-    secret: "" // Secret Key for jwt
+    secret: "", // Secret Key for jwt
+    origins: ["http://localhost:8081", "http://127.0.0.1:8081"], // Allowed origins
 };
